selfhost/test/parser/typeidentifiers_error_no_base_ident.out
Error at %FILE_NAME%:1:8
Unexpected token '[', expected 'identifier':
  |  var _: []
            ^